# server/estate/urls.py
@@ -1,6 +1,8 @@
 from django.urls import path
-from .views import RealEstatePriceView
+
+from .views import EstateAverageView, EstateDetailView
 
 urlpatterns = [
-    path('api/prices/', RealEstatePriceView.as_view(), name='real-estate-prices'),
+    path('detail/', EstateDetailView.as_view(), name='estate-detail'),
+    path('average/', EstateAverageView.as_view(), name='estate-average'),
 ]
