# swagger/housing-price-api.yaml
@@ -25,11 +25,11 @@ servers:
     description: Production server
 
 paths:
-  /api/estate/detail:
+  /api/estate/history:
     post:
       tags:
         - Estate
-      summary: 詳細な物件情報を取得
+      summary: 今年度の物件の取引履歴情報を取得
       description: 物件タイプ、構造、間取り、地域などの条件に基づいて詳細な取引情報を取得
       requestBody:
         required: true
@@ -38,11 +38,10 @@ paths:
             schema:
               $ref: "#/components/schemas/AreaSearchRequest"
             example:
-              propertyTypes: "中古マンション等"
+              propertyType: "中古マンション等"
               structures: ["wood"]
               layouts: ["2K", "2DK"]
               station: "北千住"
-              durationInYears: 3
       responses:
         "200":
           description: 検索結果の比較エリア情報
@@ -54,6 +53,7 @@ paths:
                     city: "港区"
                     districtName: "新橋"
                     tradePrice: "180000000"
+                    floorPlan: "2K"
                     area: "65"
                     buildingYear: "2002年"
                     structure: "ＲＣ"
@@ -91,7 +91,7 @@ paths:
                   propertyTypes: "宅地(土地と建物)"
                   structures: ["wood"]
                   layouts: ["3LDK", "4LDK_plus"]
-              durationInYears: 3
+              durationInYears: "3"
 
       responses:
         "200":
@@ -99,21 +99,21 @@ paths:
           content:
             application/json:
               example:
-                duration: 3
-                totalQuarters: 12
+                duration: "3"
+                totalQuarters: "12"
                 chartLabels:
-                  - "2022年Q4"
-                  - "2023年Q1"
-                  - "2023年Q2"
-                  - "2023年Q3"
-                  - "2023年Q4"
-                  - "2024年Q1"
-                  - "2024年Q2"
-                  - "2024年Q3"
-                  - "2024年Q4"
-                  - "2025年Q1"
-                  - "2025年Q2"
-                  - "2025年Q3"
+                  - "2022年第4四半期"
+                  - "2023年第1四半期"
+                  - "2023年第2四半期"
+                  - "2023年第3四半期"
+                  - "2023年第4四半期"
+                  - "2024年第1四半期"
+                  - "2024年第2四半期"
+                  - "2024年第3四半期"
+                  - "2024年第4四半期"
+                  - "2025年第1四半期"
+                  - "2025年第2四半期"
+                  - "2025年第3四半期"
                 areas:
                   - areaName: "北千住駅"
                     priceData:
